@@ -1,2 +1,3 @@
 DIST django-rest-framework-2.3.10.tar.gz 917007 SHA256 2377e389f91398012fdcee9be6694d1a63b05cd8f477803e67eb8fa3b9989b26 SHA512 ad8084b9a8e265dfad6eaf53c6c22801b6fc9b839bd142251e1305f44a9db8db95a7daedc1ab3006b2f3da83fabaf977c3ee87c1cca3f441ca990dbdc744c48d WHIRLPOOL da1739a33c2c87663380ca4be62031ee9af1f9881c4164583b132ff5da324464783483ac3c0ad81b4cfa7c1f010c69f502c70b2009ae55cdce70ede990970321
 DIST django-rest-framework-2.4.3.tar.gz 1698584 SHA256 9ddec69c706078c1bd5a04d3a6c1b93e88cfbcdb4ac9c5fbd1174317ca683de3 SHA512 65842ea4fa560656a201387d62a95c39f488aaf45088f16fea61c7d4e03d2b7ae5468b215756e58625179bc0fd6e73a1d05ec165227ff3dd8f19b3aef3ad7eee WHIRLPOOL 724911583b761e52065151149b8aac5457029892cf3ee26610e9cf7b63ab196de56f40838c9c68a527cf4f2dad38d612dbceb66e1c5d00565c2437a31a176ea3
+DIST django-rest-framework-2.4.4.tar.gz 1699591 SHA256 16ae608a65af3b6bfe35323066da719bae6ff5db34bcd8cd129ed9c48fc36ba9 SHA512 b5d7768ad805b5b897bfa28390cb3abdc44a955ea409d4487c7553a164f8f75fb9e0a95887522a45707f33d4df4e7f9eea5c50e7ae12f31cd32aecbd9e0a89de WHIRLPOOL cfb5c9eb6fc293925add57c98182cb7f91c1f816dc6ece47450402247287e134dad37f3d34632c0e7994558e1e8c93a1a0e61cdd394c179a32965deb5c3fbf61
