@@ -2,6 +2,12 @@
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*django-rest-framework-2.4.4 (29 Nov 2014)
+
+  29 Nov 2014; Johann Schmitz <ercpe@gentoo.org>
+  +django-rest-framework-2.4.4.ebuild:
+  Version bump
+
 *django-rest-framework-2.4.3 (12 Oct 2014)
 
   12 Oct 2014; Johann Schmitz <ercpe@gentoo.org>
